--- a/etch.css
+++ b/etch.css
@@ -1,30 +1,37 @@
 body {
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
     margin: 0;
     height: 100vh;
-    justify-content: space-around;
+    justify-content: space-between;
+
 }
 
-
 header {
-    align-self: center;
-    font-size: 2rem;
-    font-family: monospace;
-    margin: 1rem;
+    display: flex;
+    background: linear-gradient(to right, #9400D3, #4B0082, #0000FF, #00FF00, #FFFF00, #FF7F00, #FF0000, #FF7F00);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    justify-content: center;
+    align-self: stretch;
+    font-size: 4.2rem;
+    font-family: 'Dancing Script', cursive;
+    margin: 1rem 0;
+    border-bottom: 1px solid black
 }
 
 .main-container {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    align-items: center;
 }
 
 .drawing-container {
     display: flex;
     border: 1px solid black;
-    height: 500px;
-    width: 500px;
+    height: 550px;
+    width: 550px;
     flex-wrap: wrap;
 }
 
@@ -32,4 +39,9 @@ header {
     display: flex;
     flex-flow: column wrap;
     justify-content: space-around;
+}
+
+.info-container .slider-group {
+    display: flex;
+    flex-direction: row;
 }
