--- a/etch.css
+++ b/etch.css
@@ -3,7 +3,6 @@ body {
     flex-direction: column;
     margin: 0;
     height: 100vh;
-    justify-content: space-between;
 
 }
 
@@ -13,7 +12,6 @@ header {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     justify-content: center;
-    align-self: stretch;
     font-size: 4.2rem;
     font-family: 'Dancing Script', cursive;
     margin: 1rem 0;
@@ -22,9 +20,10 @@ header {
 
 .main-container {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     flex-wrap: wrap;
-    align-items: center;
+    gap: 2.3rem;
+    margin-bottom: 1rem;
 }
 
 .drawing-container {
@@ -32,16 +31,70 @@ header {
     border: 1px solid black;
     height: 550px;
     width: 550px;
+    min-width: 550px;
+    min-height: 550px;
     flex-wrap: wrap;
 }
 
 .info-container {
     display: flex;
     flex-flow: column wrap;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .info-container .slider-group {
     display: flex;
     flex-direction: row;
+}
+
+.heading {
+    font-size: 1.4rem;
+    font-family: 'Dancing Script', cursive;
+}
+
+.slide > p, .brightslider > p {
+    font-size: 1.3rem;
+    font-family: 'Handjet', cursive;
+    margin: 0;
+    font-weight: 900;
+}
+
+.info-container .pileOfButtons {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+}
+
+.pileOfButtons button {
+    padding: 0.6rem;
+    margin: 0.6rem;
+    transition: scale 0.3s;
+}
+
+.pileOfButtons button:hover{
+    -webkit-box-shadow: 0 0 20px rgb(68, 68, 68);
+    box-shadow: 0 0 20px rgb(68, 68, 68);
+    scale: 1.3;
+}
+
+.pileOfButtons label {
+    font-size: 1.4rem;
+    padding: 0.8rem;
+    font-family: 'Handjet', cursive;
+    font-weight: 700;
+}
+
+.colorPicker:hover {
+    -webkit-box-shadow: 0 0 20px rgb(68, 68, 68);
+    box-shadow: 0 0 20px rgb(68, 68, 68);
+    scale: 1.3;
+}
+
+.colorPicker{
+    transition: scale 0.3s;
+}
+
+.color-pick {
+    margin: 0.8rem 0;
+    transition: scale 0.2s;
 }
